# redovisa

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  redovisa.exempel.toml  users.json
.devcontainer/: devcontainer.json
.github/workflows/: container.yaml  test.yml
redovisa/: __init__.py  app.py  export.py  logging.py  middleware.py  models.py  oidc.py  pdf.py  server.py  session.py  settings.py  users.py  views.py
redovisa/oidc/: __init__.py  middleware.py  models.py  session.py  state.py
redovisa/static/: buttons.css  capture.js  functions.js  google.css  redovisa.css
redovisa/templates/: expense.j2  forbidden.j2  home.j2  mail.j2  submitted.j2
tests/: test_models.py  test_oidc.py  test_pdf.py  test_session.py  test_state.py
