[tool.poetry]
name = "redovisa"
version = "0.1.0"
description = ""
authors = ["Jakob Schlyter <jakob@schlyter.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
fastapi = "^0.111.0"
fastapi-mail = "^1.4.1"
uvicorn = "^0.30.1"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
email-validator = "^2.2.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
cryptojwt = "^1.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
known-first-party = [
    "redovisa",
]
combine-as-imports = true
split-on-trailing-comma = false
