[tool.poetry]
name = "redovisa"
version = "0.1.0"
description = ""
authors = ["Jakob Schlyter <jakob@schlyter.se>"]
readme = "README.md"

[tool.poetry.scripts]
redovisa = "redovisa.server:main"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
httpx = "^0.27.0"
email-validator = "^2.2.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
cryptojwt = "^1.9.2"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
known-first-party = [
    "redovisa",
]
combine-as-imports = true
split-on-trailing-comma = false
