[project]
name = "redovisa"
version = "0.5.0"
description = ""
authors = [{name="Jakob Schlyter", email = "jakob@schlyter.se"}]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic >= 2.8.2",
    "pydantic-settings >= 2.3.4",
    "fastapi >= 0.111.0",
    "uvicorn >= 0.30.1",
    "httpx >= 0.27.0",
    "email-validator >= 2.2.0",
    "redis[hiredis] >= 5.0.1",
    "cryptojwt >= 1.9.2",
    "python-multipart >= 0.0.19",
    "fakeredis >= 2.23.5",
    "fastapi-csrf-protect >= 0.3.4",
    "structlog >= 24.4.0",
    "pygsheets >= 2.0.6",
    "xhtml2pdf[pycairo] >= 0.2.16",
    "pypdf >= 5.0.1",
    "jinja2 >= 3.1.4",
]

[project.urls]
repository = "https://github.com/jschlyter/redovisa.git"

[project.scripts]
redovisa = "redovisa.server:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.setuptools]
packages = [ "redovisa" ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["redovisa"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001", "UP017"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
known-first-party = [
    "redovisa",
]
combine-as-imports = true
split-on-trailing-comma = false
